--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-langchain==0.0.126
-llama_index==0.4.26
-peft==0.3.0.dev0
-torch==1.12.1+cu116
-git+https://github.com/huggingface/transformers.git
+langchain
+llama_index
+peft
