--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 /index.json
-models/ggml-vocab.bin
-models/tokenizer.model
-models/gpt4all-7B/gpt4all-lora-quantized.bin
-models/gpt4all-7B/gpt4all-lora-quantized.bin.orig
-index_list_index.json
-__pycache__/gpt_llm.cpython-310.pyc
+models/*
+__pycache__/*
 .gitignore
+.conda/*
+index_simple_vector_index.json
